Add custom server format parser